# ModChemBERT

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
conf/: domain-adaptation-mtr.yaml  hyperopt-benchmark.yaml  hyperopt-mlm.yaml  hyperopt-taft.yaml  mlm.yaml  modchembert-config-mlm.yaml  modchembert-config.yaml  model-sizes.yaml  task-adaptation-ft.yaml  test.yaml  tokenizer.yaml
conf/benchmark-datasets/: antimalarial.yaml  bace_classification.yaml  bace_regression.yaml  bbbp.yaml  clearance.yaml  clintox.yaml  cocrystal.yaml  covid19.yaml  delaney.yaml  freesolv.yaml  hiv.yaml  lipo.yaml  sider.yaml  tox21.yaml
conf/chemberta3/: benchmark-classification-optimized.yaml  benchmark-classification.yaml  benchmark-regression-optimized.yaml  benchmark-regression.yaml
conf/merge/: merge-taft-checkpoints-dapt-optimized.yaml  merge-taft-checkpoints-dapt.yaml  merge-taft-checkpoints.yaml
conf/task-adaptation-ft-datasets/: adme_microsom_stab_h.yaml  adme_microsom_stab_r.yaml  adme_permeability.yaml  adme_ppb_h.yaml  adme_ppb_r.yaml  adme_solubility.yaml  astrazeneca_CL.yaml  astrazeneca_LogD74.yaml  astrazeneca_PPB.yaml  astrazeneca_Solubility.yaml
domain-adaptation-molecular-transformers/: README.md  prepare_data.sh
domain-adaptation-molecular-transformers/da4mt/: __main__.py  cli.py  splitting.py  utils.py
domain-adaptation-molecular-transformers/da4mt/adapt/: __main__.py
domain-adaptation-molecular-transformers/da4mt/prepare/: __main__.py  dataset.py  splits.py
domain-adaptation-molecular-transformers/da4mt/training/: __init__.py  multi_task_regression.py
domain-adaptation-molecular-transformers/data/adme/: adme_microsom_stab_h.csv  adme_microsom_stab_h_cleaned.csv  adme_microsom_stab_r.csv  adme_microsom_stab_r_cleaned.csv  adme_permeability.csv  adme_ppb_h.csv  adme_ppb_r.csv  adme_solubility.csv
domain-adaptation-molecular-transformers/data/astrazeneca/: astrazeneca_CL.csv  astrazeneca_LogD74.csv  astrazeneca_PPB.csv  astrazeneca_Solubility.csv
domain-adaptation-molecular-transformers/data/combined/: all_datasets_smiles.csv
modchembert/: dataset.py  patch.py  types.py  util.py
modchembert/models/: configuration_modchembert.py  modchembert.py  modeling_modchembert.py
modchembert/tokenizers/bpe/: README.md  tokenizer.json  tokenizer_config.json
modchembert/tokenizers/molformer/: README.md  tokenizer.json  tokenizer_config.json  vocab.json
modchembert/tokenizers/smiles/: README.md  special_tokens_map.json  tokenizer.json  tokenizer_config.json
scripts/: analyze_log_directory.sh  run_taft_roundrobin.py  train_modchembert.py  train_tokenizer.py
